# knowledge-graph-cv

./: .dockerignore  .env  .gitignore  Caddyfile  Dockerfile  README.md  app.py  check_costs.sh  demo_cv_data.json  env.yaml.sample  ip_filter.py  monitor_caddy.sh  pyproject.toml  requirements.txt  setup_guide.md  start.sh
.idx/: dev.nix
.streamlit/: config.toml
myapp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
